--- a/src/style.css
+++ b/src/style.css
@@ -631,6 +631,38 @@ video {
   top: 2rem;
 }
 
+.bottom-0{
+  bottom: 0px;
+}
+
+.bottom-1{
+  bottom: 0.25rem;
+}
+
+.right-2{
+  right: 0.5rem;
+}
+
+.bottom-3{
+  bottom: 0.75rem;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.left-2{
+  left: 0.5rem;
+}
+
+.left-2\.5{
+  left: 0.625rem;
+}
+
+.right-6{
+  right: 1.5rem;
+}
+
 .z-0{
   z-index: 0;
 }
@@ -878,6 +910,11 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-x-full{
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .-skew-x-12{
   --tw-skew-x: -12deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -931,6 +968,10 @@ video {
 
 .justify-around{
   justify-content: space-around;
+}
+
+.justify-items-center{
+  justify-items: center;
 }
 
 .gap-3{
@@ -1182,6 +1223,10 @@ video {
   padding: 1rem;
 }
 
+.p-2\.5{
+  padding: 0.625rem;
+}
+
 .px-12{
   padding-left: 3rem;
   padding-right: 3rem;
@@ -1195,11 +1240,6 @@ video {
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .px-7{
@@ -1266,6 +1306,10 @@ video {
 
 .pt-20{
   padding-top: 5rem;
+}
+
+.pt-2{
+  padding-top: 0.5rem;
 }
 
 .text-center{
@@ -1405,8 +1449,18 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-colors{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-700{
   transition-duration: 700ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
 }
 
 .hover\:-translate-x-0:hover{
@@ -1513,6 +1567,11 @@ video {
   border-style: none;
 }
 
+.focus\:bg-secondry:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 119 190 / var(--tw-bg-opacity));
+}
+
 .focus\:stroke-none:focus{
   stroke: none;
 }
@@ -1525,6 +1584,11 @@ video {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .active\:border-t-8:active{
@@ -1734,6 +1798,10 @@ video {
     left: 11rem;
   }
 
+  .lg\:left-48{
+    left: 12rem;
+  }
+
   .lg\:left-5{
     left: 1.25rem;
   }
@@ -1756,14 +1824,6 @@ video {
 
   .lg\:top-6{
     top: 1.5rem;
-  }
-
-  .lg\:left-4{
-    left: 1rem;
-  }
-
-  .lg\:left-48{
-    left: 12rem;
   }
 
   .lg\:col-span-1{
@@ -1920,6 +1980,10 @@ video {
     flex-wrap: nowrap;
   }
 
+  .lg\:gap-3{
+    gap: 0.75rem;
+  }
+
   .lg\:gap-7{
     gap: 1.75rem;
   }
@@ -2008,6 +2072,11 @@ video {
   .lg\:px-10{
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+  }
+
+  .lg\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .lg\:py-6{
